Small fixes from the html validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -64,6 +64,7 @@
             </p>
             <p>
                 Ниже приведены некоторые особенности GitLab:
+            </p>
             <ul>
                 <li>Платформа управления репозиторием Community Edition с открытым исходным кодом.</li>
                 <li>Простое обслуживание репозитория на сервере.</li>
@@ -72,7 +73,6 @@
                 <li>Более спонтанный пользовательский интерфейс и функции аутентификации.</li>
                 <li>Расширены права доступа пользователей и защита ветвей.</li>
             </ul>
-            </p>
             <p>
                 <a href="https://about.gitlab.com/" target="_blank">GitLab</a>
             </p>
@@ -90,6 +90,7 @@
             </p>
             <p>
                 Ниже приведены некоторые особенности GitHub:
+            </p>
             <ul>
                 <li>Указывает вехи и метки для проектов.</li>
                 <li>Допускается просмотр сравнения между ветвями.</li>
@@ -97,7 +98,6 @@
                 <li>Функция подсветки синтаксиса.</li>
                 <li>Он позволяет интегрировать сторонние API для отслеживания ошибок и облачного хостинга.</li>
             </ul>
-            </p>
             <p>
                 <a href="https://github.com/" target="_blank">GitHub</a>
             </p>
@@ -231,6 +231,7 @@
             <div class="note">
                 <p>
                     Произвести настройку можно двумя способами:
+                </p>
                 <ol>
                     <li>
                         <p>
@@ -270,7 +271,6 @@
                         </div>
                     </li>
                 </ol>
-                </p>
             </div>
         </div>
 
