Refactor html, css and js code

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <title>Git cheat sheet</title>
 </head>
 
-<body>
-    <main>
+<body class="courier-new-font">
+    <main class="main-fixed">
         <!-- Шпаргалка по Git -->
         <h1 class="text-center">Шпаргалка по Git</h1>
 
         <!-- Введение -->
         <div>
             <p>
-                <img class="img-left-align" src="img/git.svg" alt="git">
+                <img class="img-left-wrap" src="img/git.svg" alt="git">
                 <u>Git</u> — распределённая система контроля версий, которая даёт возможность разработчикам отслеживать
                 изменения в файлах и работать над одним проектом совместно с коллегами. Она была разработана в 2005 году
                 Линусом Торвальдсом, создателем Linux, чтобы другие разработчики могли вносить свой вклад в ядро Linux.
@@ -74,7 +74,7 @@
                 <li>Расширены права доступа пользователей и защита ветвей.</li>
             </ul>
             <p>
-                <a href="https://about.gitlab.com/" target="_blank">GitLab</a>
+                <a href="https://about.gitlab.com/" target="_blank" rel="noopener">GitLab</a>
             </p>
 
             <a class="anchor" href="#choice-github">
@@ -99,7 +99,7 @@
                 <li>Он позволяет интегрировать сторонние API для отслеживания ошибок и облачного хостинга.</li>
             </ul>
             <p>
-                <a href="https://github.com/" target="_blank">GitHub</a>
+                <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
             </p>
 
             <a class="anchor" href="#your-choice">
@@ -114,14 +114,14 @@
                         <th>GitHub</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="striped-rows">
                     <tr>
                         <td>Разработан</td>
                         <td>GitLab разработали Дмитрий Запорожец и Валерий Сизов.</td>
                         <td>GitHub был разработан Крисом Ванстратом, Томом Престон-Вернером, Пи Джей Хайеттом и Скоттом
                             Чаконом.</td>
                     </tr>
-                    <tr class="even-tr">
+                    <tr>
                         <td>Open-sourced</td>
                         <td>GitLab — это версия с Open-sourced кодом для сообщества.</td>
                         <td>GitHub не является Open-sourced.</td>
@@ -132,7 +132,7 @@
                         <td>GitHub позволяет пользователям иметь бесплатный частный репозиторий, но с не более чем тремя
                             соавторами.</td>
                     </tr>
-                    <tr class="even-tr">
+                    <tr>
                         <td>Навигация</td>
                         <td>GitLab предоставляет возможность навигации по репозиторию.</td>
                         <td>GitHub позволяет пользователям перемещаться по юзабилити.</td>
@@ -142,7 +142,7 @@
                         <td>GitLab предоставляет пользователю возможность просматривать диаграммы развития проекта.</td>
                         <td>На GitHub пока нет этой функции, но есть возможность проверять историю коммитов.</td>
                     </tr>
-                    <tr class="even-tr">
+                    <tr>
                         <td>Преимущества</td>
                         <td>
                             <ul>
@@ -173,7 +173,7 @@
                             </ul>
                         </td>
                     </tr>
-                    <tr class="even-tr">
+                    <tr>
                         <td>Компания</td>
                         <td>Принадлежит GitLab Inc.</td>
                         <td>Принадлежит корпорации Microsoft.</td>
@@ -202,7 +202,7 @@
                     Дистрибутивы <em>Git</em> для систем Linux и POSIX доступны на официальном сайте Git SCM.
                 </p>
                 <p>
-                    <a href="https://desktop.github.com/" target="_blank">desktop.github.com</a>
+                    <a href="https://desktop.github.com/" target="_blank" rel="noopener">desktop.github.com</a>
                 </p>
             </div>
 
@@ -211,7 +211,7 @@
             </a>
             <div>
                 <p>
-                    <a href="https://git-scm.com/" target="_blank">git-scm.com</a>
+                    <a href="https://git-scm.com/" target="_blank" rel="noopener">git-scm.com</a>
                 </p>
             </div>
         </div>
@@ -680,24 +680,24 @@
     </div>
 
     <!-- Подвал -->
-    <footer>
-        <hr>
+    <footer class="footer-gray">
+        <hr class="footer-hr">
         <p>
             &copy; 2022
             <sup>M</sup><sub>e</sub><sup>S</sup><sub>h</sub><sub>o</sub><sub>o</sub><sub>t</sub><sup>I</sup><sub>n</sub>
         </p>
         <p>
-            <a class="icon-link" href="https://github.com/MeShootIn" target="_blank">
+            <a class="icon-link" href="https://github.com/MeShootIn" target="_blank" rel="noopener">
                 <img class="footer-icon" src="img/github.svg" alt="github">
             </a>
-            <a class="icon-link" href="https://t.me/MeShootIn" target="_blank">
+            <a class="icon-link" href="https://t.me/MeShootIn" target="_blank" rel="noopener">
                 <img class="footer-icon" src="img/telegram.svg" alt="telegram">
             </a>
         </p>
     </footer>
 
     <!-- Скрипт обработки данных формы -->
-    <script async src="script/form.js"></script>
+    <script src="script/form.js"></script>
 </body>
 
 </html>
