Add `.gitignore` and change link `rel` attribute

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style/style.css">
 
-    <!-- Ubuntu terminal fonts -->
+    <!-- Шрифты терминала Ubuntu -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
@@ -74,7 +73,7 @@
                 <li>Расширены права доступа пользователей и защита ветвей.</li>
             </ul>
             <p>
-                <a href="https://about.gitlab.com/" target="_blank" rel="noopener">GitLab</a>
+                <a href="https://about.gitlab.com/" target="_blank" rel="nofollow noopener noreferrer">GitLab</a>
             </p>
 
             <a class="anchor" href="#choice-github">
@@ -99,7 +98,7 @@
                 <li>Он позволяет интегрировать сторонние API для отслеживания ошибок и облачного хостинга.</li>
             </ul>
             <p>
-                <a href="https://github.com/" target="_blank" rel="noopener">GitHub</a>
+                <a href="https://github.com/" target="_blank" rel="nofollow noopener noreferrer">GitHub</a>
             </p>
 
             <a class="anchor" href="#your-choice">
@@ -202,7 +201,7 @@
                     Дистрибутивы <em>Git</em> для систем Linux и POSIX доступны на официальном сайте Git SCM.
                 </p>
                 <p>
-                    <a href="https://desktop.github.com/" target="_blank" rel="noopener">desktop.github.com</a>
+                    <a href="https://desktop.github.com/" target="_blank" rel="nofollow noopener noreferrer">desktop.github.com</a>
                 </p>
             </div>
 
@@ -211,7 +210,7 @@
             </a>
             <div>
                 <p>
-                    <a href="https://git-scm.com/" target="_blank" rel="noopener">git-scm.com</a>
+                    <a href="https://git-scm.com/" target="_blank" rel="nofollow noopener noreferrer">git-scm.com</a>
                 </p>
             </div>
         </div>
@@ -687,10 +686,10 @@
             <sup>M</sup><sub>e</sub><sup>S</sup><sub>h</sub><sub>o</sub><sub>o</sub><sub>t</sub><sup>I</sup><sub>n</sub>
         </p>
         <p>
-            <a class="icon-link" href="https://github.com/MeShootIn" target="_blank" rel="noopener">
+            <a class="icon-link" href="https://github.com/MeShootIn" target="_blank" rel="nofollow noopener noreferrer">
                 <img class="footer-icon" src="img/github.svg" alt="github">
             </a>
-            <a class="icon-link" href="https://t.me/MeShootIn" target="_blank" rel="noopener">
+            <a class="icon-link" href="https://t.me/MeShootIn" target="_blank" rel="nofollow noopener noreferrer">
                 <img class="footer-icon" src="img/telegram.svg" alt="telegram">
             </a>
         </p>
