Rewrote all styles from CSS to SCSS, change social icons and make several fixes

--- a/index.html
+++ b/index.html
@@ -16,26 +16,23 @@
   <title>Git cheat sheet</title>
 </head>
 
-<body class="courier-new-font">
-<main class="main-fixed">
+<body>
+<main>
   <!-- Git cheat sheet -->
-  <h1 class="text-center">Шпаргалка по Git</h1>
+  <h1>Шпаргалка по Git</h1>
 
   <!-- Introduction -->
-  <div>
-    <p>
-      <img class="img-left-wrap" src="images/git.svg" alt="git">
-      <u>Git</u> — распределённая система контроля версий, которая даёт
-      возможность разработчикам отслеживать
-      изменения в файлах и работать над одним проектом совместно с коллегами.
-      Она была разработана в 2005 году
-      Линусом Торвальдсом, создателем Linux, чтобы другие разработчики могли
-      вносить свой вклад в ядро Linux.
-      <em>Git</em> известен своей скоростью, простым дизайном, поддержкой
-      нелинейной разработки, полной
-      децентрализацией и возможностью эффективно работать с большими проектами.
-    </p>
-  </div>
+  <p>
+    <img class="git-logo" src="images/git.svg" alt="git">
+    <strong>Git</strong> — распределённая система контроля версий, которая даёт
+    возможность разработчикам отслеживать изменения в файлах и работать над
+    одним проектом совместно с коллегами. Она была разработана в 2005 году
+    Линусом Торвальдсом, создателем Linux, чтобы другие разработчики могли
+    вносить свой вклад в ядро Linux.
+    <em>Git</em> известен своей скоростью, простым дизайном, поддержкой
+    нелинейной разработки, полной децентрализацией и возможностью эффективно
+    работать с большими проектами.
+  </p>
 
   <!-- Quote -->
   <figure class="quote">
@@ -53,28 +50,23 @@
     </a>
     <p>
       Разработчики в определенный момент становятся перед выбором, какой сервис
-      для системы контроля версий
-      выбрать. И даже самые опытные чаще всего колеблются: <i>GitHub</i> или
-      <i>GitLab</i>?
+      для системы контроля версий выбрать. И даже самые опытные чаще всего
+      колеблются: <i>GitHub</i> или <i>GitLab</i>?
     </p>
 
     <a class="anchor" href="#choice-gitlab">
       <h3 id="choice-gitlab">GitLab</h3>
     </a>
     <p>
-      <i>GitLab</i> — это инструмент управления хостингом репозитория,
-      разработанный GitLab Inc и используемый
-      в
-      процессе разработки программного обеспечения. Он предоставляет различные
-      средства управления, с помощью
+      <b>GitLab</b> — это инструмент управления хостингом репозитория,
+      разработанный GitLab Inc и используемый в процессе разработки программного
+      обеспечения. Он предоставляет различные средства управления, с помощью
       которых мы можем оптимизировать совместный рабочий процесс для завершения
-      жизненного цикла разработки
-      программного обеспечения. Это также позволяет нам импортировать
-      репозиторий из Google Code, Bitbucket и
-      т. д.
+      жизненного цикла разработки программного обеспечения. Это также позволяет
+      нам импортировать репозиторий из Google Code, Bitbucket и т.д.
     </p>
     <p>
-      Ниже приведены некоторые особенности GitLab:
+      Ниже приведены некоторые особенности <i>GitLab</i>:
     </p>
     <ul>
       <li>Платформа управления репозиторием Community Edition с открытым
@@ -82,8 +74,7 @@
       </li>
       <li>Простое обслуживание репозитория на сервере.</li>
       <li>Предлагает такие инструменты, как групповые вехи, отслеживание времени
-        и отслеживание проблем и т.
-        д. для эффективного развития.
+        и отслеживание проблем и т.д. для эффективного развития.
       </li>
       <li>Более спонтанный пользовательский интерфейс и функции
         аутентификации.
@@ -91,7 +82,7 @@
       <li>Расширены права доступа пользователей и защита ветвей.</li>
     </ul>
     <p>
-      <a href="https://about.gitlab.com/" target="_blank"
+      <a href="https://about.gitlab.com" target="_blank"
          rel="nofollow noopener noreferrer">GitLab</a>
     </p>
 
@@ -99,24 +90,20 @@
       <h3 id="choice-github">GitHub</h3>
     </a>
     <p>
-      <i>GitHub</i> — это инструмент службы размещения репозитория, который
-      обеспечивает совместную работу и
-      контроль
-      доступа. Это платформа, на которой программисты могут вместе исправлять
-      ошибки и размещать проекты с
+      <b>GitHub</b> — это инструмент службы размещения репозитория, который
+      обеспечивает совместную работу и контроль доступа. Это платформа, на
+      которой программисты могут вместе исправлять ошибки и размещать проекты с
       открытым исходным кодом. <i>GitHub</i> предназначен для разработчиков и
-      помогает им отслеживать свои
-      изменения
-      в проекте через репозиторий.
+      помогает им отслеживать свои изменения в проекте через репозиторий.
     </p>
     <p>
-      Ниже приведены некоторые особенности GitHub:
+      Ниже приведены некоторые особенности <i>GitHub</i>:
     </p>
     <ul>
       <li>Указывает вехи и метки для проектов.</li>
       <li>Допускается просмотр сравнения между ветвями.</li>
-      <li><i>GitHub Pages</i> позволяет нам публиковать и размещать веб-сайты в
-        GitHub.
+      <li><i>GitHub Pages</i> позволяет нам публиковать и размещать веб-сайты на
+        <i>GitHub</i>.
       </li>
       <li>Функция подсветки синтаксиса.</li>
       <li>Он позволяет интегрировать сторонние API для отслеживания ошибок и
@@ -124,23 +111,23 @@
       </li>
     </ul>
     <p>
-      <a href="https://github.com/" target="_blank"
+      <a href="https://github.com" target="_blank"
          rel="nofollow noopener noreferrer">GitHub</a>
     </p>
 
     <a class="anchor" href="#your-choice">
       <h3 id="your-choice">Решать Вам</h3>
     </a>
-    <table>
+    <table class="comparison-table">
       <caption>Различия между GitLab и GitHub</caption>
-      <thead class="thead-ubuntu">
+      <thead>
       <tr>
         <th>Параметры</th>
         <th>GitLab</th>
         <th>GitHub</th>
       </tr>
       </thead>
-      <tbody class="striped-rows">
+      <tbody>
       <tr>
         <td>Разработан</td>
         <td>GitLab разработали Дмитрий Запорожец и Валерий Сизов.</td>
@@ -225,12 +212,9 @@
       <h2 id="installation">Установка Git</h2>
     </a>
     <p>
-      <i>GitHub</i> предоставляет оконное приложение с графическим интерфейсом
-      для выполнения основных
-      операций с
-      репозиторием, и консольную версию <em>Git</em> с автоматическими
-      обновлениями для расширенных сценариев
-      работы.
+      GitHub предоставляет оконное приложение с графическим интерфейсом
+      для выполнения основных операций с репозиторием, и консольную версию <em>Git</em>
+      с автоматическими обновлениями для расширенных сценариев работы.
     </p>
 
     <a class="anchor" href="#github-desktop">
@@ -242,7 +226,7 @@
         официальном сайте Git SCM.
       </p>
       <p>
-        <a href="https://desktop.github.com/" target="_blank"
+        <a href="https://desktop.github.com" target="_blank"
            rel="nofollow noopener noreferrer">desktop.github.com</a>
       </p>
     </div>
@@ -252,7 +236,7 @@
     </a>
     <div>
       <p>
-        <a href="https://git-scm.com/" target="_blank"
+        <a href="https://git-scm.com" target="_blank"
            rel="nofollow noopener noreferrer">git-scm.com</a>
       </p>
     </div>
@@ -263,11 +247,10 @@
     <a class="anchor" href="#initial-setup">
       <h2 id="initial-setup">Первоначальная настройка</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Настройка информации о пользователе для всех локальных репозиториев
-      </p>
-    </div>
+    <p class="block__description">
+      Настройка информации о пользователе для всех локальных репозиториев
+    </p>
+
     <hr>
 
     <div class="note">
@@ -327,12 +310,10 @@
     <a class="anchor" href="#init-repo">
       <h2 id="init-repo">Создание репозитория</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Создание нового репозитория или получение его по существующему
-        URL-адресу
-      </p>
-    </div>
+    <p class="block__description">
+      Создание нового репозитория или получение его по существующему URL-адресу
+    </p>
+
     <hr>
 
     <div class="note">
@@ -360,12 +341,11 @@
     <a class="anchor" href="#files">
       <h2 id="files">Операции с файлами</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Перемещение и удаление версий файлов репозитория
-      </p>
-      <hr>
-    </div>
+    <p class="block__description">
+      Перемещение и удаление версий файлов репозитория
+    </p>
+
+    <hr>
 
     <div class="note">
       <p>
@@ -404,11 +384,10 @@
     <a class="anchor" href="#ignore">
       <h2 id="ignore">Игнорирование некоторых файлов</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Исключение временных и вторичных файлов и директорий
-      </p>
-    </div>
+    <p class="block__description">
+      Исключение временных и вторичных файлов и директорий
+    </p>
+
     <hr>
 
     <div class="note">
@@ -428,11 +407,10 @@
     <a class="anchor" href="#stash">
       <h2 id="stash">Сохранение фрагментов</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Сохранение и восстановление незавершённых изменений
-      </p>
-    </div>
+    <p class="block__description">
+      Сохранение и восстановление незавершённых изменений
+    </p>
+
     <hr>
 
     <div class="note">
@@ -481,11 +459,10 @@
     <a class="anchor" href="#changes">
       <h2 id="changes">Внесение изменений</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Просмотр изменений и создание коммитов (фиксация изменений)
-      </p>
-    </div>
+    <p class="block__description">
+      Просмотр изменений и создание коммитов (фиксация изменений)
+    </p>
+
     <hr>
 
     <div class="note">
@@ -555,11 +532,10 @@
     <a class="anchor" href="#teamwork">
       <h2 id="teamwork">Коллективная работа</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Именованные серии коммитов и соединение результатов работы
-      </p>
-    </div>
+    <p class="block__description">
+      Именованные серии коммитов и соединение результатов работы
+    </p>
+
     <hr>
 
     <div class="note">
@@ -615,11 +591,10 @@
     <a class="anchor" href="#history">
       <h2 id="history">Просмотр истории</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Просмотр и изучение истории изменений файлов проекта
-      </p>
-    </div>
+    <p class="block__description">
+      Просмотр и изучение истории изменений файлов проекта
+    </p>
+
     <hr>
 
     <div class="note">
@@ -668,11 +643,10 @@
     <a class="anchor" href="#reset">
       <h2 id="reset">Откат коммитов</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Удаление ошибок и корректировка созданной истории
-      </p>
-    </div>
+    <p class="block__description">
+      Удаление ошибок и корректировка созданной истории
+    </p>
+
     <hr>
 
     <div class="note">
@@ -703,11 +677,10 @@
     <a class="anchor" href="#remote">
       <h2 id="remote">Синхронизация с удалённым репозиторием</h2>
     </a>
-    <div class="block-description">
-      <p>
-        Регистрация удалённого репозитория и обмен изменениями
-      </p>
-    </div>
+    <p class="block__description">
+      Регистрация удалённого репозитория и обмен изменениями
+    </p>
+
     <hr>
 
     <div class="note">
@@ -756,46 +729,49 @@
   </div>
 
   <div class="ad block">
-    <p>🙂Тут могла быть Ваша реклама🙃</p>
+    <p>🙂 Тут могла быть Ваша реклама 🙃</p>
   </div>
 </main>
 
-<!-- Feedback -->
-<div class="block">
-  <form class="feedback-form" action="mailto:dmitriimishutin@gmail.com"
-        method="GET" target="_blank">
-    <h2 class="title">📧 Оставьте отзыв о статье</h2>
+<form class="feedback-form" action="mailto:dmitriimishutin@gmail.com"
+      method="GET" target="_blank">
+  <h2>📧 Оставьте отзыв о статье</h2>
 
-    <input type="hidden" name="subject" value="Git cheat sheet">
-    <div>
-      <label for="message">Сообщение</label>
-      <br>
-      <textarea name="body" id="message"></textarea>
-    </div>
-    <div>
-      <input type="submit" value="Отправить" onclick="onSubmit();">
-    </div>
-  </form>
-</div>
+  <input type="hidden" name="subject" value="Git cheat sheet">
+  <div class="feedback-form__input">
+    <label for="message">Сообщение</label>
+    <br>
+    <textarea id="message" name="body"></textarea>
+  </div>
+  <div>
+    <button class="feedback-form__submit" type="submit" onclick="onSubmit();">
+      Отправить
+    </button>
+  </div>
+</form>
 
-<!-- Footer -->
-<footer class="footer-gray">
-  <hr class="footer-hr">
-  <p>
-    &copy; 2022
-    <sup>M</sup><sub>e</sub><sup>S</sup><sub>h</sub><sub>o</sub><sub>o</sub>
-    <sub>t</sub><sup>I</sup><sub>n</sub>
-  </p>
-  <p>
-    <a class="icon-link" href="https://github.com/MeShootIn" target="_blank"
-       rel="nofollow noopener noreferrer">
-      <img class="footer-icon" src="images/github.svg" alt="github">
-    </a>
-    <a class="icon-link" href="https://t.me/MeShootIn" target="_blank"
-       rel="nofollow noopener noreferrer">
-      <img class="footer-icon" src="images/telegram.svg" alt="telegram">
-    </a>
-  </p>
+<!-- Bottom footer -->
+<footer class="bottom-footer">
+  <hr class="bottom-footer__hr">
+
+  <div>
+    <span class="social-icon">
+      <a class="social-icon__link" href="https://github.com/MeShootIn"
+         target="_blank" rel="nofollow noopener noreferrer">
+        <img class="social-icon__icon" src="images/github.svg" alt="github">
+      </a>
+    </span>
+    <span class="social-icon">
+      <a class="social-icon__link" href="https://t.me/MeShootIn" target="_blank"
+         rel="nofollow noopener noreferrer">
+        <img class="social-icon__icon" src="images/telegram.svg" alt="telegram">
+      </a>
+    </span>
+  </div>
+
+  <div>
+    &copy;&nbsp;2022&nbsp;<sup>M</sup><sub>e</sub><sup>S</sup><sub>h</sub><sub>o</sub><sub>o</sub><sub>t</sub><sup>I</sup><sub>n</sub>
+  </div>
 </footer>
 
 <!-- Form data processing script -->
