Remove unnecessary folder `./style` and do small refactoring

--- a/index.html
+++ b/index.html
@@ -758,15 +758,13 @@
   <h2>📧 Оставьте отзыв о статье</h2>
 
   <input type="hidden" name="subject" value="Git cheat sheet">
-  <div class="feedback-form__input">
+  <div class="feedback-form__input-section">
     <label for="message">Сообщение</label>
     <br>
     <textarea id="message" name="body"></textarea>
   </div>
   <div>
-    <button class="feedback-form__submit" type="submit" onclick="onSubmit();">
-      Отправить
-    </button>
+    <button class="feedback-form__submit" type="submit">Отправить</button>
   </div>
 </form>
 
