Rename file `./scripts/form.js` to `./index.js`

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
 </footer>
 
 <!-- Form data processing script -->
-<script src="scripts/form.js"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
