Add `<noscript>` tag

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+<noscript>JavaScript отключён или не поддерживается Вашим браузером!</noscript>
+
 <main>
   <!-- Git cheat sheet -->
   <h1>Шпаргалка по Git</h1>
