Add "Underscore.js" library

--- a/index.html
+++ b/index.html
@@ -858,6 +858,11 @@
 
 <!-- Form data processing script -->
 <script src="./index.js"></script>
+<!-- Underscore.js -->
+<script
+  defer
+  src="https://cdn.jsdelivr.net/npm/underscore@1.13.6/underscore-umd-min.js">
+</script>
 </body>
 
 </html>
